ghc-diagnostics/test/fixtures/parse-error/Foo.hs
module Foo where

data foo
